<resources>
    <string name="app_name">Special Buddy</string>
    <!--    <string name="default_web_client_id">296549609665-9j87q9d2diimja9bn4tu0qt9e3p7bp0d.apps.googleusercontent.com</string>-->
    <string name="action_settings">Settings</string>
    <string name="about">About</string>

    <string name="hint_username">Enter a new username</string>


    <string-array name="disability">
        <item>Person with Disability</item>
        <item>Person Without Disability</item>
    </string-array>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="my_profile">My Profile</string>
    <string name="contacts_list">Contacts List</string>
    <string name="find_a_buddy">Find a Buddy</string>
    <string name="buddies_requests_and_suggestions">Buddies Requests and Suggestions</string>
    <string name="enable_accessibility_settings">Enable Accessibility Settings</string>
    <string name="file_complaint">File Complaint</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="logout">Logout</string>
    <string name="allow_permission">Allow Permission</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>