<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_profile">

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.fyp.specialbuddy.dashBoard.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_contact_list"
        android:name="com.fyp.specialbuddy.dashBoard.ContactsFragment"
        android:label="@string/contacts_list"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_find_buddy"
        android:name="com.fyp.specialbuddy.dashBoard.MapsFragment"
        android:label="@string/find_a_buddy"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_buddy_request"
        android:name="com.fyp.specialbuddy.dashBoard.BuddiesRequestsSugFragment"
        android:label="@string/buddies_requests_and_suggestions"
        tools:layout="@layout/fragment_buddies_requests_sug" />
    <fragment
        android:id="@+id/nav_accessability"
        android:name="com.fyp.specialbuddy.dashBoard.EnableAccFragment"
        android:label="@string/buddies_requests_and_suggestions"
        tools:layout="@layout/fragment_enable_acc" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.fyp.specialbuddy.dashBoard.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_file_complain"
        android:name="com.fyp.specialbuddy.dashBoard.FileComplainFragment"
        android:label="File a Complain"
        tools:layout="@layout/fragment_slideshow" />
</navigation>